k8s/base/clickhouse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: batchsender
  labels:
    app: clickhouse
spec:
  type: ClusterIP
  ports:
  - port: 8123
    targetPort: 8123
    name: http
  - port: 9000
    targetPort: 9000
    name: native
  selector:
    app: clickhouse
